# caliper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-CC-BY  LICENSE-CERN-OHL-W  MUJOCO_LOG.TXT  README.md  justfile
.github/workflows/: ci.yml  release.yml
apps/studio/: index.html  package-lock.json  package.json  vitest.config.ts
apps/studio/src/: App.css  App.tsx  commands.test.ts  commands.ts  coords.test.ts  coords.ts  logging.test.ts  logging.ts  main.tsx  sevColor.ts  store.test.ts  store.ts  tour.test.ts  tour.ts
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json  tauri.mujoco.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: lib.rs
apps/studio/src/data/: DataMode.tsx  EpisodeChart.tsx  data.css  episodes.test.ts  episodes.ts
apps/studio/src/design/: tokens.css
apps/studio/src/doctor/: doctor.test.ts  doctor.ts
apps/studio/src/graph/: GraphEditor.tsx  ScopeChart.tsx  graph.css  nodes.tsx  serialize.test.ts  serialize.ts  spec.ts  types.ts
apps/studio/src/sim/: props.test.ts  props.ts
apps/studio/src/test/: setup.ts
apps/studio/src/three/: Ellipsoid.tsx  IkGizmo.tsx  PropsLayer.tsx  RobotView.tsx  TipPath.tsx  Visuals.tsx
apps/studio/src/ui/: Hud.tsx  JointPanel.tsx  Palette.tsx  PosePanel.tsx  SimulatePanel.tsx  SingularityHud.tsx  Toolbar.tsx  Tour.tsx  Transport.tsx  hud.css  palette.css  panels.css  tour.css
crates/caliper/: Cargo.toml
crates/caliper-calib/: Cargo.toml
crates/caliper-calib/src/: lib.rs
crates/caliper-cli/: Cargo.toml
crates/caliper-cli/src/: main.rs  report.rs  zoo.rs
crates/caliper-collision/: Cargo.toml
crates/caliper-collision/benches/: collision.rs
crates/caliper-collision/src/: lib.rs
crates/caliper-dataset/: Cargo.toml
crates/caliper-dataset/src/: analyze.rs  edit.rs  error.rs  lib.rs  meta.rs  reader.rs  stats.rs  writer.rs
crates/caliper-dataset/tests/: analyze.rs  edit_ops.rs  image_features.rs  lerobot_v30.rs  lerobot_v30_images.rs  roundtrip.rs
crates/caliper-doctor/: Cargo.toml
crates/caliper-doctor/src/: checks.rs  lib.rs  massprops.rs  repair.rs  resolve.rs  xml.rs
crates/caliper-dynamics/: Cargo.toml
crates/caliper-dynamics/benches/: dynamics.rs
crates/caliper-dynamics/src/: lib.rs
crates/caliper-graph/: Cargo.toml
crates/caliper-graph/src/: exec.rs  ir.rs  lib.rs  validate.rs
crates/caliper-hal/: Cargo.toml
crates/caliper-hal/src/: control.rs  lib.rs  physics.rs  recorder.rs  safety.rs  setpoint.rs  sim.rs  streaming.rs  teleop.rs
crates/caliper-hal/src/backends/: can_mks.rs  dynamixel.rs  mod.rs  remote.rs
crates/caliper-ik/: Cargo.toml
crates/caliper-ik/benches/: ik.rs
crates/caliper-ik/src/: analytic.rs  lib.rs  redundancy.rs
crates/caliper-kinematics/: Cargo.toml
crates/caliper-kinematics/benches/: kinematics.rs
crates/caliper-kinematics/src/: lib.rs
crates/caliper-model/: Cargo.toml
crates/caliper-model/src/: hull.rs  lib.rs  stl.rs  xacro.rs
crates/caliper-motion/: Cargo.toml
crates/caliper-motion/src/: cartesian.rs  lib.rs  limits.rs  movej.rs  poses.rs  scurve.rs  tests.rs  topp.rs  trajectory.rs  waypoints.rs
crates/caliper-planning/: Cargo.toml
crates/caliper-planning/benches/: planning.rs
crates/caliper-planning/src/: lib.rs  prm.rs  reach.rs  rng.rs  rrt.rs  rrtstar.rs  smooth.rs
crates/caliper-py/: Cargo.toml  pyproject.toml
crates/caliper-py/python/caliper/: __init__.py  __init__.pyi  interop.py
crates/caliper-py/src/: lib.rs
crates/caliper-sim-mujoco/: Cargo.toml
crates/caliper-sim-mujoco/src/: backend.rs  lib.rs  lint.rs  mjcf.rs  sim.rs
crates/caliper-sim-mujoco/tests/: contact_lint.rs  mujoco_sim.rs
crates/caliper-spatial/: Cargo.toml
crates/caliper-spatial/src/: lib.rs
crates/caliper-trajopt/: Cargo.toml
crates/caliper-trajopt/src/: lib.rs
crates/caliper/examples/: dynamics_demo.rs  ik_demo.rs  load_and_fk.rs  plan_demo.rs
crates/caliper/src/: lib.rs
docs/: VERIFICATION_REPORT.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  introduction.md  license.md  quickstart.md  verification.md
docs/book/src/faces/: cli.md  (+3 more)
examples/python/: quickstart.py
learn/: README.md  pyproject.toml
learn/caliper_learn/: __init__.py  autopsy.py  checkpoint.py  cli.py  collect.py  collect_sim.py  coverage_gen.py  data.py  debugger.py  deploy.py  diffusion.py  eval.py  hub.py  policy.py  profile.py  randomize.py  runner.py  sim_camera.py  train.py  vec_env.py  video.py
learn/tests/: conftest.py  test_autopsy.py  test_collect.py  test_data_policy.py  test_diffusion.py  test_eval.py  test_hub_deploy.py  test_profile.py  test_randomize.py  test_train_deploy.py  test_vec_env.py  test_video.py
oracle/fixtures/corpus/: README.md
oracle/fixtures/datasets/: README.md  gen_img_v30.py  gen_ref_v30.py
oracle/fixtures/robots/: branched.urdf  collide_arm.urdf  collide_capsule.urdf  collide_mesh.urdf  collide_mesh_scaled.urdf  collide_mixed.urdf  collide_pkg_mesh.urdf  collide_shapes.urdf  disconnected.urdf  doctor_bad_inertia.urdf  doctor_clean.urdf  doctor_dup_mesh.urdf  doctor_mesh_missing.urdf  doctor_mimic.urdf  doctor_onshape.urdf  doctor_repairable.urdf  doctor_visual_only.urdf  doctor_xacro_leftover.urdf  doctor_zero_axis.urdf  dyn_pendulum2.urdf  dyn_welded.urdf  fixed_only.urdf  gripper_mimic.urdf  limit_arm.urdf  prismatic.urdf  redundant7.urdf  showcase6.urdf  toy.urdf  unit_cube.stl  visual_arm.urdf  visual_hand.stl  xacro_arm.xacro  xacro_arm_common.xacro  xacro_arm_expected.urdf
oracle/tests/: test_centroidal.py  test_corpus.py  test_dataset_v3.py  test_doctors.py  test_exporters.py  test_faces2.py  test_faces_new.py  test_graph.py  test_ik_ref.py  test_lerobot_dataset.py  test_lerobot_roundtrip.py  test_mimic.py  test_motion.py  test_motion_ref.py  test_phase5.py  test_pinocchio.py  test_pinocchio_dynamics.py  test_planning.py  test_sim_camera.py  test_smoke.py  test_stress.py
scripts/: assert-lean.sh  bundle_mujoco.sh  fetch_mujoco.sh  measure_lightweight.sh  test_measure_lightweight.sh
(+30 files in other folders)
