[workspace]
resolver = "3"
members = [
  "crates/caliper-spatial",
  "crates/caliper-model",
  "crates/caliper-kinematics",
  "crates/caliper-dynamics",
  "crates/caliper-ik",
  "crates/caliper-motion",
  "crates/caliper-hal",
  "crates/caliper-dataset",
  "crates/caliper-collision",
  "crates/caliper-planning",
  "crates/caliper-trajopt",
  "crates/caliper-graph",
  "crates/caliper-calib",
  "crates/caliper",
  "crates/caliper-cli",
  "crates/caliper-py",
  "apps/studio/src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.1.0"
# Apache-2.0 covers the software. The hardware design files are CERN-OHL-W and the
# documentation is CC-BY — see the root LICENSE-* files (those are repo-level, not
# crate license fields).
license = "Apache-2.0"
repository = "https://github.com/msannikov03/caliper"
homepage = "https://github.com/msannikov03/caliper"
readme = "README.md"

[workspace.dependencies]
nalgebra = { version = "0.35", features = ["serde-serialize"] }
# Benchmarks: keep `cargo_bench_support` (the harness) but drop plotters/rayon so
# the dev-dependency tree stays light. `cargo bench --no-run` gates compilation.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
urdf-rs = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
approx = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
pyo3 = { version = "0.29", features = ["abi3-py310"] }
caliper-spatial    = { path = "crates/caliper-spatial", version = "0.1.0" }
caliper-model      = { path = "crates/caliper-model", version = "0.1.0" }
caliper-kinematics = { path = "crates/caliper-kinematics", version = "0.1.0" }
caliper-dynamics   = { path = "crates/caliper-dynamics", version = "0.1.0" }
caliper-ik         = { path = "crates/caliper-ik", version = "0.1.0" }
caliper-motion     = { path = "crates/caliper-motion", version = "0.1.0" }
caliper-hal        = { path = "crates/caliper-hal", version = "0.1.0" }
caliper-dataset    = { path = "crates/caliper-dataset", version = "0.1.0" }
caliper-collision  = { path = "crates/caliper-collision", version = "0.1.0" }
caliper-planning   = { path = "crates/caliper-planning", version = "0.1.0" }
caliper-trajopt    = { path = "crates/caliper-trajopt", version = "0.1.0" }
caliper-graph      = { path = "crates/caliper-graph", version = "0.1.0" }
caliper-calib      = { path = "crates/caliper-calib", version = "0.1.0" }
caliper            = { path = "crates/caliper", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
