[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caliper_learn"
version = "0.1.0"
description = "Minimal pure-torch behavior-cloning sidecar for the Caliper robotics engine"
requires-python = ">=3.11"
# NOTE: `caliper` is a RUNTIME dependency but is NOT listed here — it is the local
# PyO3 wheel built via `maturin develop`, not a PyPI package.
dependencies = ["torch", "numpy"]

[project.scripts]
caliper-learn = "caliper_learn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["caliper_learn"]
