[package]
name = "caliper-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "caliper"
path = "src/main.rs"

[dependencies]
caliper.workspace = true
clap.workspace = true
anyhow.workspace = true
nalgebra.workspace = true
