[package]
name = "caliper-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Command-line interface for the Caliper robotics engine"
keywords = ["robotics", "cli", "kinematics", "engine", "command-line"]
categories = ["science::robotics", "command-line-utilities"]

[[bin]]
name = "caliper"
path = "src/main.rs"

[dependencies]
caliper = { workspace = true, features = ["dataset"] }
caliper-collision.workspace = true
caliper-dataset.workspace = true
clap.workspace = true
anyhow.workspace = true
nalgebra.workspace = true
serde_json.workspace = true
