[package]
name = "caliper-dynamics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true
caliper-model.workspace = true
caliper-spatial.workspace = true
caliper-kinematics.workspace = true

[dev-dependencies]
proptest = "1"
