[package]
name = "caliper-kinematics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Forward kinematics, Jacobians, and singularity analysis for robot arms"
keywords = ["robotics", "kinematics", "jacobian", "singularity", "forward"]
categories = ["science::robotics", "mathematics"]

[dependencies]
caliper-spatial.workspace = true
caliper-model.workspace = true
nalgebra.workspace = true

[dev-dependencies]
proptest = "1"
criterion.workspace = true

[[bench]]
name = "kinematics"
harness = false
