[package]
name = "caliper-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Robot model representation and URDF loading for the Caliper engine"
keywords = ["robotics", "urdf", "model", "kinematics", "robot"]
categories = ["science::robotics"]

[dependencies]
caliper-spatial.workspace = true
nalgebra.workspace = true
urdf-rs.workspace = true
thiserror.workspace = true
