[package]
name = "caliper-motion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "S-curve motion profiles (MOVE_J/L/C) and trajectory retiming"
keywords = ["robotics", "motion", "trajectory", "s-curve", "planning"]
categories = ["science::robotics"]

[dependencies]
caliper-spatial.workspace = true
caliper-model.workspace = true
caliper-kinematics.workspace = true
caliper-ik.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
serde.workspace = true
