[package]
name = "caliper-planning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Collision-aware motion planning (RRT-Connect) and reachability"
keywords = ["robotics", "planning", "rrt", "motion-planning", "reachability"]
categories = ["science::robotics", "algorithms"]

# Collision-aware motion planning (RRT-Connect + shortcut smoothing) and
# collision-aware reachability. Pure nalgebra/std — ZERO heavy deps, so the lean
# `caliper` facade can re-export it. Deterministic: a hand-rolled splitmix64 PRNG
# (no `rand`), so a given seed always yields the same plan.
[dependencies]
thiserror.workspace = true
nalgebra.workspace = true
caliper-model.workspace = true
caliper-kinematics.workspace = true
caliper-ik.workspace = true
caliper-spatial.workspace = true
caliper-collision.workspace = true
caliper-motion.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "planning"
harness = false
