[package]
name = "caliper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
caliper-spatial.workspace = true
caliper-model.workspace = true
caliper-kinematics.workspace = true
caliper-dynamics.workspace = true
caliper-ik.workspace = true
caliper-hal.workspace = true
