[package]
name = "caliper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Caliper robotics engine — unified facade over the sub-crates"
keywords = ["robotics", "kinematics", "dynamics", "ik", "engine"]
categories = ["science::robotics"]

[features]
default = []
# Opt-in LeRobotDataset record/replay (forwards to caliper-hal). OFF by default,
# so the lean facade tree stays free of arrow/parquet.
dataset = ["caliper-hal/dataset"]
# Opt-in MuJoCo contact simulation (forwards to caliper-sim-mujoco/mujoco).
# OFF by default: enabling it LINKS a shared libmujoco 3.9.0 — see
# crates/caliper-sim-mujoco/Cargo.toml for the MUJOCO_DYNAMIC_LINK_DIR setup.
mujoco = ["dep:caliper-sim-mujoco", "caliper-sim-mujoco/mujoco"]

[dependencies]
caliper-spatial.workspace = true
caliper-model.workspace = true
caliper-kinematics.workspace = true
caliper-dynamics.workspace = true
caliper-ik.workspace = true
caliper-motion.workspace = true
caliper-hal.workspace = true
caliper-planning.workspace = true
caliper-trajopt.workspace = true
caliper-collision.workspace = true
caliper-graph.workspace = true
caliper-calib.workspace = true
caliper-sim-mujoco = { workspace = true, optional = true }
