[package]
name = "studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# MuJoCo contact sim: `sim_contact_run` + the "mujoco" engine in `sim_engines`.
# OFF by default and it must STAY OFF for release bundles: mujoco-rs links a
# SHARED libmujoco we do not (yet) bundle — shipping the dylib inside the
# signed .app (rpath, codesign, notarization) is unsolved. Dev-only:
#   MUJOCO_DYNAMIC_LINK_DIR=<dir> cargo build --features mujoco
# with DYLD_LIBRARY_PATH / LD_LIBRARY_PATH containing that dir at run time.
# Without the feature the commands stay registered and fail gracefully
# (`sim_engines` omits "mujoco", `sim_contact_run` returns a clear Err).
mujoco = ["dep:caliper-sim-mujoco", "caliper-sim-mujoco/mujoco"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
caliper = { workspace = true }
caliper-collision = { workspace = true }
caliper-dataset = { workspace = true }
caliper-sim-mujoco = { workspace = true, optional = true }
nalgebra = { workspace = true }

